--- a/themes/butterfly/layout/includes/widget/index.pug
+++ b/themes/butterfly/layout/includes/widget/index.pug
@@ -31,6 +31,7 @@
       !=partial('includes/widget/card_newest_comment', {}, {cache: true})
       !=partial('includes/widget/card_categories', {}, {cache: true})
       !=partial('includes/widget/card_tags', {}, {cache: true})
+      !=partial('includes/widget/card_calendar', {}, {cache: true})
       !=partial('includes/widget/card_archives', {}, {cache: true})
       !=partial('includes/widget/card_webinfo', {}, {cache: true})
       !=partial('includes/widget/card_bottom_self', {}, {cache: true})
